# varweeks_millis

./: .gitignore  Cargo.toml  README.md  cache70.txt
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/fmt/: trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/varweeks_millis/: lib.rs.html  micro_time_mod.rs.html  milli_time_mod.rs.html  varweek_date_mod.rs.html
docs/varweeks_millis/: all.html  index.html  sidebar-items.js  struct.MicroTime.html  struct.MilliTime.html  struct.VarweekDate.html
docs/varweeks_millis/micro_time_mod/: index.html  sidebar-items.js  struct.MicroTime.html
docs/varweeks_millis/milli_time_mod/: index.html  sidebar-items.js  struct.MilliTime.html
docs/varweeks_millis/varweek_date_mod/: index.html  sidebar-items.js  struct.VarweekDate.html
src/: lib.rs  micro_time_mod.rs  milli_time_mod.rs  varweek_date_mod.rs
tmp/: temp69.txt  temp70.txt
